# aeo-experiments

./: .gitignore  README.md  pyproject.toml
.claude/skills/brand-og-image/: SKILL.md
.claude/skills/dataforseo-llm-scraper/: SKILL.md
docs/: data-policy.md  methodology.md  workflow.md
experiments/001-youtube-citation-type/: spec.md
experiments/001-youtube-citation-type/archive/: analysis-v1.py  spec-v1.md
experiments/001-youtube-citation-type/pipeline/: 01_features.py  02_audit.py  03_model.py  04_figures.py  05_release.py  common.py
experiments/001-youtube-citation-type/results/: audit.txt  model_results.csv  model_summary.txt  release-checklist-signed.md
experiments/001-youtube-citation-type/sql/: counts.sql  extract.sql
experiments/002-prompt-consistency/: run_wave.py  spec.md
experiments/002-prompt-consistency/pipeline/: 00_prompts.py  01_features.py  02_audit.py  03_model.py  04_figures.py  05_release.py  90_exploratory_features.py  91_exploratory_figures.py  brands.py  common.py  (+3 more)
scripts/: generate_og_image.py  lint_article.py  llm_scraper.py  make_og_image.py  sync_site_assets.py
site/: astro.config.mjs  package.json  pnpm-lock.yaml
site/public/: robots.txt
site/src/: consts.ts  content.config.ts
src/aeo_research/: __init__.py  anonymize.py  dataforseo.py  og_image.py  overlap.py  plotting.py  stats.py  synthetic.py  youtube.py
templates/: article.mdx  blog-brief.md  experiment-spec.md  release-checklist.md
tests/: test_anonymize.py  test_dataforseo.py  test_og_image.py  test_overlap.py  test_plotting.py  test_stats.py  test_youtube.py
(+30 files in other folders)
