[project]
name = "aeo-research"
version = "0.1.0"
description = "Toolkit for Spyglasses research studies published at research.spyglasses.io"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "statsmodels>=0.14",
    "scipy>=1.13",
    "matplotlib>=3.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "cairosvg>=2.7",
    "replicate>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aeo_research"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
